[project]
name = "net-mcp"
version = "0.1.0"
description = "MCP server for network engineering — BGP routing, RPKI validation, and DNSSEC-aware DNS"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0",
    "pybgpkit>=0.6",
    "dnspython[dnssec]>=2.6",
    "httpx>=0.27",
]

[project.scripts]
net-mcp = "net_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/net_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
